[gd_scene load_steps=2 format=3 uid="uid://dwfyxhnik18ry"]

[ext_resource type="Script" path="res://Scripts/UI/Player/player_ui.gd" id="1_c845e"]

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c845e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1067.0
offset_top = 876.0
offset_right = 1107.0
offset_bottom = 926.0

[node name="PlayerGold" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Gold"

[node name="PlayerXP" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "XP
"

[node name="PlayerLevel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level
"
